--- a/css2.css
+++ b/css2.css
@@ -1,52 +1,73 @@
 /* Estilo para el cuerpo de la página */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background: linear-gradient(to bottom, #3498db, #333);
+    color: #fff;
     margin: 0;
     padding: 0;
-    text-align: center;
 }
 
 /* Estilo para el encabezado */
 h1 {
+    text-align: center;
     background-color: #333;
     color: #fff;
-    padding: 10px;
+    padding: 20px;
+    margin: 0;
 }
 
 /* Estilo para la tabla */
 table {
-    width: 80%;
-    margin: 20px auto;
+    width: 100%;
     border-collapse: collapse;
+    margin: 20px auto;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-/* Estilo para las celdas encabezado */
-th {
+/* Estilo para la tabla */
+table {
+    margin: 20px auto; /* Centra la tabla */
+    width: 80%; /* Reduce el ancho de la tabla al 80% del contenedor */
+    border-collapse: collapse;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    color: #000; /* Color de texto en negro */
+}
+
+/* Estilo para las celdas del encabezado */
+table th {
     background-color: #333;
     color: #fff;
     padding: 10px;
+    text-align: center;
 }
 
-/* Estilo para las celdas de datos */
-td {
-    background-color: #f9f9f9;
+/* Estilo para las filas impares de la tabla */
+table tr:nth-child(odd) {
+    background-color: #f7f7f7;
+}
+
+/* Estilo para las filas pares de la tabla */
+table tr:nth-child(even) {
+    background-color: #fff;
+}
+
+/* Estilo para las celdas de la tabla */
+table td {
     padding: 10px;
+    text-align: center;
 }
 
-/* Estilo para las filas impares */
-tr:nth-child(odd) {
-    background-color: #e0e0e0;
+/* Estilo para los enlaces dentro de la tabla */
+table a {
+    color: #3498db;
+    text-decoration: none;
+    font-weight: bold;
 }
 
-/* Estilo para las filas al pasar el mouse */
-tr:hover {
-    background-color: #ccc;
+/* Estilo para los enlaces al pasar el mouse */
+table a:hover {
+    text-decoration: underline;
 }
 
-body {
-    background-image: url("images/ocelot.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-}
